--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<p class="ALM">KP.BEOR RT 03 RW 09 BABAKAN PEUTEUY KEC.CICALENGKA KAB.BANDUNG PROVINSI JAWA BARAT</p>
 			<div class="col-2">
 				<i class="fa-solid fa-envelope"></i>
-				<p><a href="mailto:email@email.com">E-MAIL</a></p>
+				<p><a href="mailto:zulfakamil801@gmail.com">E-MAIL</a></p>
 			</div>
 			<div class="col-2">
 				<i class="fa-brands fa-whatsapp"></i>
